--- a/important-pages/dmca.html
+++ b/important-pages/dmca.html
@@ -6,14 +6,8 @@
   <title>DMCA - Chromebook Unlocked Games</title>
   <meta name="description" content="DMCA and Copyright Information for Chromebook Unlocked Games.">
   <link rel="icon" type="image/png" href="../assets/logo.png">
-
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     :root {
       --primary-color: #ff66ff;
       --primary-dark: #cc00ff;
@@ -25,7 +19,6 @@
       --text-secondary: rgba(255, 255, 255, 0.8);
       --text-muted: rgba(255, 255, 255, 0.6);
     }
-
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       background: linear-gradient(135deg, var(--bg-dark) 0%, var(--bg-medium) 50%, var(--bg-light) 100%);
@@ -34,7 +27,6 @@
       min-height: 100vh;
       line-height: 1.6;
     }
-
     header {
       background: rgba(13, 0, 26, 0.85);
       backdrop-filter: blur(20px);
@@ -44,29 +36,14 @@
       top: 0;
       z-index: 100;
     }
-
-    .header-content {
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-    }
-
-    .logo {
-      width: 48px;
-      height: 48px;
-      border-radius: 12px;
-    }
-
+    .header-content { max-width: 1200px; margin: 0 auto; display: flex; align-items: center; gap: 1rem; }
+    .logo { width: 48px; height: 48px; border-radius: 12px; }
     h1 {
       font-size: 1.5rem;
       background: linear-gradient(135deg, var(--primary-color), var(--primary-light));
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      background-clip: text;
     }
-
     main {
       max-width: 900px;
       margin: 2rem auto;
@@ -75,56 +52,9 @@
       border-radius: 16px;
       border: 1px solid rgba(255, 102, 255, 0.2);
     }
-
-    h2 {
-      color: var(--primary-light);
-      margin: 2rem 0 1rem 0;
-      font-size: 1.5rem;
-    }
-
-    h3 {
-      color: var(--text-primary);
-      margin: 1.5rem 0 0.75rem 0;
-      font-size: 1.2rem;
-    }
-
-    p {
-      color: var(--text-secondary);
-      margin: 1rem 0;
-    }
-
-    ul, ol {
-      margin: 1rem 0 1rem 2rem;
-      color: var(--text-secondary);
-    }
-
-    li {
-      margin: 0.5rem 0;
-    }
-
-    .notice {
-      background: rgba(255, 102, 255, 0.1);
-      border-left: 4px solid var(--primary-color);
-      padding: 1.5rem;
-      margin: 1.5rem 0;
-      border-radius: 4px;
-    }
-
-    .notice strong {
-      color: var(--primary-light);
-    }
-
-    a {
-      color: var(--primary-color);
-      text-decoration: none;
-      border-bottom: 1px solid rgba(255, 102, 255, 0.4);
-    }
-
-    a:hover {
-      color: var(--primary-light);
-      border-bottom-color: var(--primary-light);
-    }
-
+    p, ul, ol { color: var(--text-secondary); margin: 1rem 0; }
+    h2 { color: var(--primary-light); margin: 2rem 0 1rem; font-size: 1.5rem; }
+    a { color: var(--primary-color); text-decoration: none; border-bottom: 1px solid rgba(255,102,255,0.4); }
     .back-button {
       display: inline-block;
       padding: 0.75rem 1.5rem;
@@ -135,33 +65,6 @@
       margin-top: 2rem;
       transition: all 0.3s ease;
       border: none;
-    }
-
-    .back-button:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 6px 20px rgba(255, 102, 255, 0.4);
-    }
-
-    footer {
-      text-align: center;
-      padding: 2rem;
-      color: var(--text-muted);
-      font-size: 0.9rem;
-    }
-
-    @media (max-width: 768px) {
-      main {
-        margin: 1rem;
-        padding: 1.5rem;
-      }
-
-      h1 {
-        font-size: 1.2rem;
-      }
-
-      h2 {
-        font-size: 1.3rem;
-      }
     }
   </style>
 </head>
@@ -174,134 +77,36 @@
   </header>
 
   <main>
-    <p><strong>Last Updated:</strong> December 2024</p>
+    <h2>DMCA</h2>
+    <p><strong>Last Updated:</strong> October 19, 2025</p>
 
-    <div class="notice">
-      <strong>Important Notice:</strong> Chromebook Unlocked Games respects the intellectual property rights
-      of others. All games on this site are copyrighted by their respective owners. We host games that are
-      freely available or have been shared by their creators for public use.
-    </div>
+    <p>ChromebookUnlocked.Github.io (the "Site") respects the intellectual property rights of others and expects its users to do the same. In accordance with the Digital Millennium Copyright Act of 1998, the text of which may be found on the U.S. Copyright Office website at http://www.copyright.gov/legislation/dmca.pdf, and specifically in accordance with 17 USC § 512(c)(3), ChromebookUnlocked.Github.io will respond expeditiously to claims of copyright infringement committed using the ChromebookUnlocked.Github.io service and/or any ChromebookUnlocked.Github.io website (the "Site") if such claims are reported to ChromebookUnlocked.Github.io's Designated Email identified below.</p>
 
-    <h2>Copyright Policy</h2>
-    <p>
-      We respect the intellectual property rights of game developers and content creators.
-      If you believe that your copyrighted work has been used on our site without authorization,
-      please follow the DMCA takedown procedure outlined below.
-    </p>
+    <h2>DMCA Notice of Alleged Infringement ("Notice")</h2>
+    <p>If you are a copyright owner, authorized to act on behalf of one, or authorized to act under any exclusive right under copyright, please report alleged copyright infringements taking place on or through the Site by completing a DMCA Notice of Alleged Infringement and delivering it to ChromebookUnlocked.Github.io's Designated Email. Upon receipt of Notice as described below, ChromebookUnlocked.Github.io will take whatever action, in its sole discretion, it deems appropriate, including removal of the challenged content from the Site.</p>
 
-    <h2>DMCA Takedown Notice</h2>
-    <p>
-      To file a DMCA takedown notice, please provide the following information:
-    </p>
+    <p>Please note that if you fail to comply with all of the requirements of this section and of 17 USC § 512(c)(3) your DMCA notice may not be valid.</p>
 
+    <h2>To Submit a Notice, Include:</h2>
     <ol>
-      <li>
-        <strong>Identification of the copyrighted work:</strong> Describe the copyrighted work that
-        you claim has been infringed, or if multiple works, a representative list.
+      <li>Identification of the copyrighted work that you claim has been infringed, or if multiple works are covered, a representative list.</li>
+      <li>Identification of the material or link you claim is infringing (including the URL or exact location).</li>
+      <li>Your company affiliation (if applicable), mailing address, phone number, and email address.</li>
+      <li>Include the following statements:<br>
+        - "I hereby state that I have a good faith belief that the disputed use of the copyrighted material is not authorized by the copyright owner, its agent, or the law (e.g., as a fair use)."<br>
+        - "I hereby state that the information in this Notice is accurate and, under penalty of perjury, that I am the owner, or authorized to act on behalf of the owner, of the copyright or of an exclusive right under the copyright that is allegedly infringed."
       </li>
-      <li>
-        <strong>Identification of the infringing material:</strong> Provide the URL(s) of the specific
-        page(s) on our site that contain the allegedly infringing material.
-      </li>
-      <li>
-        <strong>Your contact information:</strong> Include your name, address, telephone number,
-        and email address.
-      </li>
-      <li>
-        <strong>Good faith statement:</strong> Include a statement that you have a good faith belief
-        that the disputed use is not authorized by the copyright owner, its agent, or the law.
-      </li>
-      <li>
-        <strong>Accuracy statement:</strong> Include a statement that the information in your notice
-        is accurate and, under penalty of perjury, that you are the copyright owner or authorized to
-        act on behalf of the copyright owner.
-      </li>
-      <li>
-        <strong>Electronic signature:</strong> Provide your physical or electronic signature.
-      </li>
+      <li>Your full legal name and electronic or physical signature.</li>
     </ol>
 
-    <h2>How to Submit a DMCA Notice</h2>
-    <p>
-      Send your complete DMCA notice to:
-    </p>
-    <p style="margin-left: 2rem;">
-      <strong>Email:</strong> dmca@chromebookunlocked.github.io<br>
-      <strong>Subject Line:</strong> DMCA Takedown Request
-    </p>
-
-    <h2>Response to DMCA Notices</h2>
-    <p>
-      Upon receipt of a valid DMCA notice, we will:
-    </p>
-    <ul>
-      <li>Review the notice for completeness and validity</li>
-      <li>Remove or disable access to the allegedly infringing content</li>
-      <li>Notify the user who posted the content (if applicable)</li>
-      <li>Respond to the complainant within 48-72 hours</li>
-    </ul>
-
-    <h2>Counter-Notification</h2>
-    <p>
-      If you believe that content you posted was wrongly removed due to a DMCA notice,
-      you may file a counter-notification containing:
-    </p>
-    <ul>
-      <li>Your contact information</li>
-      <li>Identification of the removed content and its location</li>
-      <li>A statement under penalty of perjury that the content was removed by mistake</li>
-      <li>Your consent to jurisdiction in your location</li>
-      <li>Your physical or electronic signature</li>
-    </ul>
-
-    <h2>Fair Use</h2>
-    <p>
-      We believe in fair use and educational purposes. Many games on our platform are:
-    </p>
-    <ul>
-      <li>Open-source or freely distributed</li>
-      <li>Educational games for learning</li>
-      <li>Games shared by developers for promotion</li>
-      <li>Classic games in the public domain</li>
-    </ul>
-
-    <h2>Game Developers</h2>
-    <p>
-      If you're a game developer and would like your game featured on our site, or if you'd like
-      to discuss licensing, please <a href="contact.html">contact us</a>. We're always happy to
-      work with developers to properly credit and promote their work.
-    </p>
-
-    <h2>Repeat Infringers</h2>
-    <p>
-      We have a policy of terminating, in appropriate circumstances, access to our site for users
-      who are repeat infringers of intellectual property rights.
-    </p>
-
-    <h2>Disclaimer</h2>
-    <p>
-      Chromebook Unlocked Games does not claim ownership of any games hosted on this platform.
-      All game copyrights belong to their respective owners and developers. We provide games for
-      educational and entertainment purposes only.
-    </p>
-
-    <div class="notice">
-      <strong>Note:</strong> False DMCA claims may result in legal liability. Please ensure your
-      notice is accurate and that you have the authority to make the claim.
-    </div>
-
-    <h2>Additional Resources</h2>
-    <ul>
-      <li><a href="https://www.copyright.gov/dmca/" target="_blank" rel="noopener">U.S. Copyright Office - DMCA</a></li>
-      <li><a href="privacy-policy.html">Our Privacy Policy</a></li>
-      <li><a href="contact.html">Contact Us</a></li>
-    </ul>
+    <h2>Designated Email</h2>
+    <p><strong>Email:</strong> chunlocked.business@gmail.com</p>
 
     <a href="../index.html" class="back-button">← Back to Games</a>
   </main>
 
   <footer>
-    <p>&copy; 2024 Chromebook Unlocked Games. All rights reserved.</p>
+    <p>&copy; 2025 Chromebook Unlocked Games. All rights reserved.</p>
   </footer>
 </body>
 </html>
