--- a/important-pages/cookie-policy.html
+++ b/important-pages/cookie-policy.html
@@ -1,269 +1,96 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cookie Policy - Chromebook Unlocked Games</title>
-  <meta name="description" content="Learn about how Chromebook Unlocked Games uses cookies to enhance your gaming experience.">
-  <link rel="icon" type="image/png" href="../assets/logo.png">
+<main>
+  <p><strong>Last Updated:</strong> October 19, 2025</p>
 
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  <h2>What Are Cookies?</h2>
+  <p>
+    Cookies are small text files stored on your device when you visit a website. They help websites function
+    correctly, improve performance, remember preferences, and provide analytics information. Some cookies are
+    essential for the site to work, while others enhance your experience.
+  </p>
 
-    :root {
-      --primary-color: #ff66ff;
-      --primary-dark: #cc00ff;
-      --primary-light: #ff99ff;
-      --bg-dark: #0d001a;
-      --bg-medium: #1c0033;
-      --bg-light: #2d0052;
-      --text-primary: #ffffff;
-      --text-secondary: rgba(255, 255, 255, 0.8);
-      --text-muted: rgba(255, 255, 255, 0.6);
-    }
+  <h2>How We Use Cookies</h2>
+  <p>ChromebookUnlocked.Github.io uses cookies for the following purposes:</p>
 
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: linear-gradient(135deg, var(--bg-dark) 0%, var(--bg-medium) 50%, var(--bg-light) 100%);
-      background-attachment: fixed;
-      color: var(--text-primary);
-      min-height: 100vh;
-      line-height: 1.6;
-    }
+  <h3>1. Essential Cookies</h3>
+  <ul>
+    <li><strong>Cookie Consent:</strong> Saves your cookie preference choices.</li>
+    <li><strong>Recently Played Games:</strong> Stores local game history to improve convenience.</li>
+    <li><strong>Core Functionality:</strong> Enables important site features needed for smooth browsing and gameplay.</li>
+  </ul>
 
-    header {
-      background: rgba(13, 0, 26, 0.85);
-      backdrop-filter: blur(20px);
-      padding: 1rem 2rem;
-      border-bottom: 2px solid rgba(255, 102, 255, 0.3);
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
+  <h3>2. Analytics Cookies</h3>
+  <ul>
+    <li><strong>Google Analytics:</strong> Provides anonymized insights into how users interact with the site.</li>
+    <li><strong>Performance Monitoring:</strong> Helps detect issues and improve loading times.</li>
+    <li><strong>Game Popularity Tracking:</strong> Allows us to see which games are used most often.</li>
+  </ul>
 
-    .header-content {
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-    }
+  <h2>Types of Cookies We Use</h2>
 
-    .logo {
-      width: 48px;
-      height: 48px;
-      border-radius: 12px;
-    }
+  <h3>Session Cookies</h3>
+  <p>
+    These temporary cookies are deleted when you close your browser. They help maintain site functionality
+    and remember temporary settings.
+  </p>
 
-    h1 {
-      font-size: 1.5rem;
-      background: linear-gradient(135deg, var(--primary-color), var(--primary-light));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-    }
+  <h3>Persistent Cookies</h3>
+  <p>
+    These remain on your device for a set duration or until deleted. They help us remember your preferences
+    and improve your experience when returning to the site.
+  </p>
 
-    main {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 2rem;
-      background: rgba(255, 255, 255, 0.05);
-      border-radius: 16px;
-      border: 1px solid rgba(255, 102, 255, 0.2);
-    }
+  <h2>Managing Your Cookies</h2>
+  <p>
+    You can control or delete cookies at any time. However, disabling some cookies may affect site performance
+    or prevent certain features from working properly.
+  </p>
 
-    h2 {
-      color: var(--primary-light);
-      margin: 2rem 0 1rem 0;
-      font-size: 1.5rem;
-    }
+  <h3>Browser Controls</h3>
+  <p>You can adjust cookie behavior directly through your browser settings, including:</p>
+  <ul>
+    <li>Allowing all cookies</li>
+    <li>Blocking all cookies</li>
+    <li>Receiving alerts when a cookie is set</li>
+    <li>Deleting cookies when closing your browser</li>
+  </ul>
 
-    h3 {
-      color: var(--text-primary);
-      margin: 1.5rem 0 0.75rem 0;
-      font-size: 1.2rem;
-    }
+  <h3>Cookie Banner</h3>
+  <p>When you first visit the site, you may see a cookie consent banner. You can:</p>
+  <ul>
+    <li>Accept all cookies</li>
+    <li>Customize your cookie preferences</li>
+    <li>Decline non-essential cookies</li>
+  </ul>
 
-    p {
-      color: var(--text-secondary);
-      margin: 1rem 0;
-    }
+  <h2>Third-Party Cookies</h2>
+  <p>
+    Some cookies on our website are set by third-party services we use, including:
+  </p>
+  <ul>
+    <li><strong>Google Analytics:</strong> Used for anonymized usage statistics and traffic insights.</li>
+    <li><strong>Embedded Games:</strong> Certain games may store their own cookies depending on their platform or provider.</li>
+  </ul>
 
-    ul, ol {
-      margin: 1rem 0 1rem 2rem;
-      color: var(--text-secondary);
-    }
+  <h2>Your Rights</h2>
+  <p>You have the right to:</p>
+  <ul>
+    <li>Know what cookies we use and why</li>
+    <li>Accept or reject cookies</li>
+    <li>Change cookie settings at any time</li>
+    <li>Delete cookies from your browser</li>
+  </ul>
 
-    li {
-      margin: 0.5rem 0;
-    }
+  <h2>Changes to This Policy</h2>
+  <p>
+    We may update this Cookie Policy to reflect changes in our practices, legal requirements, or site
+    functionality. Updates will be posted on this page with a revised “Last Updated” date.
+  </p>
 
-    a {
-      color: var(--primary-color);
-      text-decoration: none;
-      border-bottom: 1px solid rgba(255, 102, 255, 0.4);
-    }
+  <h2>Contact Us</h2>
+  <p>
+    If you have questions regarding our Cookie Policy, please visit our
+    <a href="contact.html">Contact page</a>.
+  </p>
 
-    a:hover {
-      color: var(--primary-light);
-      border-bottom-color: var(--primary-light);
-    }
-
-    .back-button {
-      display: inline-block;
-      padding: 0.75rem 1.5rem;
-      background: linear-gradient(135deg, var(--primary-color), var(--primary-dark));
-      color: white;
-      border-radius: 12px;
-      font-weight: 600;
-      margin-top: 2rem;
-      transition: all 0.3s ease;
-      border: none;
-    }
-
-    .back-button:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 6px 20px rgba(255, 102, 255, 0.4);
-    }
-
-    footer {
-      text-align: center;
-      padding: 2rem;
-      color: var(--text-muted);
-      font-size: 0.9rem;
-    }
-
-    @media (max-width: 768px) {
-      main {
-        margin: 1rem;
-        padding: 1.5rem;
-      }
-
-      h1 {
-        font-size: 1.2rem;
-      }
-
-      h2 {
-        font-size: 1.3rem;
-      }
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <div class="header-content">
-      <img src="../assets/logo.png" alt="Chromebook Unlocked Games" class="logo">
-      <h1>Cookie Policy</h1>
-    </div>
-  </header>
-
-  <main>
-    <p><strong>Last Updated:</strong> December 2024</p>
-
-    <h2>What Are Cookies</h2>
-    <p>
-      Cookies are small text files that are placed on your computer or mobile device when you visit our website.
-      They are widely used to make websites work more efficiently and provide information to the website owners.
-    </p>
-
-    <h2>How We Use Cookies</h2>
-    <p>Chromebook Unlocked Games uses cookies for the following purposes:</p>
-
-    <h3>Essential Cookies</h3>
-    <ul>
-      <li><strong>Cookie Consent:</strong> Remember your cookie preferences</li>
-      <li><strong>Recently Played Games:</strong> Store your gaming history locally for quick access</li>
-      <li><strong>Site Functionality:</strong> Enable core features of our gaming platform</li>
-    </ul>
-
-    <h3>Analytics Cookies</h3>
-    <ul>
-      <li><strong>Google Analytics:</strong> Help us understand how visitors use our site</li>
-      <li><strong>Performance Monitoring:</strong> Track site performance and identify issues</li>
-      <li><strong>Usage Statistics:</strong> Analyze which games are most popular</li>
-    </ul>
-
-    <h2>Types of Cookies We Use</h2>
-
-    <h3>Session Cookies</h3>
-    <p>
-      These temporary cookies are deleted when you close your browser. They help us remember your preferences
-      during your browsing session.
-    </p>
-
-    <h3>Persistent Cookies</h3>
-    <p>
-      These cookies remain on your device for a set period or until you delete them. They help us remember
-      your preferences and recognize you when you return to our site.
-    </p>
-
-    <h2>Managing Cookies</h2>
-    <p>
-      You can control and manage cookies in various ways. Please note that removing or blocking cookies
-      may impact your user experience and some features may no longer function properly.
-    </p>
-
-    <h3>Browser Settings</h3>
-    <p>
-      Most web browsers allow you to control cookies through their settings. You can set your browser to:
-    </p>
-    <ul>
-      <li>Accept all cookies</li>
-      <li>Notify you when a cookie is set</li>
-      <li>Reject all cookies</li>
-      <li>Delete cookies when you close your browser</li>
-    </ul>
-
-    <h3>Our Cookie Banner</h3>
-    <p>
-      When you first visit our site, you'll see a cookie consent banner. You can:
-    </p>
-    <ul>
-      <li>Accept all cookies by clicking "Accept" or closing the banner</li>
-      <li>Access more settings to customize your preferences</li>
-      <li>Decline non-essential cookies</li>
-    </ul>
-
-    <h2>Third-Party Cookies</h2>
-    <p>
-      Some cookies on our site are placed by third-party services we use:
-    </p>
-    <ul>
-      <li><strong>Google Analytics:</strong> Helps us analyze site traffic and usage patterns</li>
-      <li><strong>Game Embeds:</strong> Some games may use cookies from their hosting platforms</li>
-    </ul>
-
-    <h2>Your Rights</h2>
-    <p>
-      You have the right to:
-    </p>
-    <ul>
-      <li>Know what cookies we use and why</li>
-      <li>Accept or reject cookies</li>
-      <li>Delete cookies at any time</li>
-      <li>Change your cookie preferences</li>
-    </ul>
-
-    <h2>Updates to This Policy</h2>
-    <p>
-      We may update this Cookie Policy from time to time to reflect changes in our practices or for
-      legal, operational, or regulatory reasons. We encourage you to review this policy periodically.
-    </p>
-
-    <h2>Contact Us</h2>
-    <p>
-      If you have any questions about our use of cookies, please visit our <a href="contact.html">Contact page</a>.
-    </p>
-
-    <a href="../index.html" class="back-button">← Back to Games</a>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 Chromebook Unlocked Games. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+  <a href="../index.html" class="back-button">← Back to Games</a>
+</main>
