--- a/important-pages/contact.html
+++ b/important-pages/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contact Us - Chromebook Unlocked Games</title>
-  <meta name="description" content="Get in touch with Chromebook Unlocked Games - Contact us for support, suggestions, or feedback.">
+  <meta name="description" content="Contact Chromebook Unlocked Games for support, bug reports, feedback, game requests, or DMCA inquiries.">
   <link rel="icon" type="image/png" href="../assets/logo.png">
 
   <style>
@@ -173,15 +173,12 @@
         margin: 1rem;
         padding: 1.5rem;
       }
-
       h1 {
         font-size: 1.2rem;
       }
-
       h2 {
         font-size: 1.3rem;
       }
-
       .contact-card {
         padding: 1rem;
       }
@@ -198,13 +195,13 @@
 
   <main>
     <p>
-      We'd love to hear from you! Whether you have questions, suggestions, or need support,
-      feel free to reach out to us.
+      Have a question, suggestion, or concern? We're here to help!  
+      Use the contact options below to reach the Chromebook Unlocked Games team.
     </p>
 
     <div class="contact-card">
-      <h3><span class="icon">📧</span> Email</h3>
-      <p>For general inquiries, support, or feedback:</p>
+      <h3><span class="icon">📧</span> Email Support</h3>
+      <p>For general questions, support, feedback, or account-related concerns:</p>
       <a href="mailto:contact@chromebookunlocked.github.io" class="email-link">
         contact@chromebookunlocked.github.io
       </a>
@@ -212,63 +209,60 @@
 
     <div class="contact-card">
       <h3><span class="icon">🎮</span> Game Requests</h3>
-      <p>
-        Want to see a specific game added to our site? Let us know! Send us an email with:
-      </p>
+      <p>If you’d like us to add a new game, please include:</p>
       <ul>
-        <li>Game name</li>
-        <li>Brief description</li>
-        <li>Why you'd like to see it added</li>
+        <li>Game title</li>
+        <li>A brief description</li>
+        <li>A link if possible</li>
+        <li>Why you want it added</li>
       </ul>
     </div>
 
     <div class="contact-card">
-      <h3><span class="icon">🐛</span> Report Issues</h3>
-      <p>
-        Found a bug or experiencing technical difficulties? Please contact us with:
-      </p>
+      <h3><span class="icon">🐛</span> Bug Reports & Technical Issues</h3>
+      <p>If something isn’t working right, help us fix it by telling us:</p>
       <ul>
-        <li>Description of the issue</li>
-        <li>Game or page where the issue occurs</li>
-        <li>Your device and browser information</li>
-        <li>Steps to reproduce (if applicable)</li>
+        <li>What happened</li>
+        <li>Where it happened (game/page)</li>
+        <li>Your device & browser</li>
+        <li>Steps to reproduce the issue</li>
       </ul>
     </div>
 
     <div class="contact-card">
-      <h3><span class="icon">⚖️</span> Legal & DMCA</h3>
+      <h3><span class="icon">⚖️</span> Legal & DMCA Requests</h3>
       <p>
-        For copyright concerns or DMCA takedown requests, please visit our
+        For copyright concerns, takedown notices, or legal inquiries, please visit our
         <a href="dmca.html" style="color: var(--primary-color);">DMCA page</a>.
       </p>
     </div>
 
     <h2>Response Time</h2>
     <p>
-      We typically respond to inquiries within 1-3 business days. During peak times,
-      it may take slightly longer. We appreciate your patience!
+      We do our best to respond within <strong>1–3 business days</strong>.  
+      During busy periods, responses may take slightly longer. Thank you for your patience!
     </p>
 
     <div class="note">
-      <strong>Note:</strong> We do not collect personal information through our website.
-      Any information you provide via email is used solely to respond to your inquiry.
-      For more details, see our <a href="privacy-policy.html" style="color: var(--primary-color);">Privacy Policy</a>.
+      <strong>Privacy Note:</strong> We do not collect personal information on our website.  
+      Any details you provide via email are used only to respond to your message.  
+      See our <a href="privacy-policy.html" style="color: var(--primary-color);">Privacy Policy</a> for more info.
     </div>
 
     <h2>Community Guidelines</h2>
-    <p>When contacting us, please:</p>
+    <p>Please follow these when sending messages:</p>
     <ul>
-      <li>Be respectful and courteous</li>
-      <li>Provide clear and detailed information</li>
-      <li>Use appropriate language</li>
-      <li>Be patient while waiting for a response</li>
+      <li>Be respectful and polite</li>
+      <li>Provide clear and accurate details</li>
+      <li>Avoid inappropriate language</li>
+      <li>Allow time for a proper response</li>
     </ul>
 
     <a href="../index.html" class="back-button">← Back to Games</a>
   </main>
 
   <footer>
-    <p>&copy; 2024 Chromebook Unlocked Games. All rights reserved.</p>
+    <p>&copy; 2025 Chromebook Unlocked Games. All rights reserved.</p>
   </footer>
 </body>
 </html>
