Revert "Update DMCA email and add legal footer"

--- a/dmca.html
+++ b/dmca.html
@@ -173,7 +173,7 @@
           <p style="margin-top:12px;">
             <span class="important">Deliver this Notice, with all items completed, to ChromebookUnlocked.Github.io's Designated Email:</span>
             <br />
-            <strong><a href="mailto:chunlocked.business@gmail.com">chunlocked.business@gmail.com</a></strong>
+            <strong><a href="mailto:html5game77@gmail.com">html5game77@gmail.com</a></strong>
           </p>
         </div>
       </section>
@@ -194,7 +194,7 @@
         <small>© <span id="year">2025</span> ChromebookUnlocked.Github.io</small>
       </div>
       <div>
-        <small>Designated Email: <a href="mailto:chunlocked.business@gmail.com">chunlocked.business@gmail.com</a></small>
+        <small>Designated Email: <a href="mailto:html5game77@gmail.com">html5game77@gmail.com</a></small>
       </div>
     </footer>
   </div>
