--- a/important-pages/dmca.html
+++ b/important-pages/dmca.html
@@ -100,7 +100,7 @@
     </ol>
 
     <h2>Designated Email</h2>
-    <p><strong>Email:</strong> chunlocked.business@gmail.com</p>
+    <p><strong>Email:</strong> chunblocked.contact@gmail.com</p>
 
     <a href="../index.html" class="back-button">← Back to Games</a>
   </main>
