--- a/important-pages/contact.html
+++ b/important-pages/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contact Us - Chromebook Unlocked Games</title>
-  <meta name="description" content="Contact Chromebook Unlocked Games for support, bug reports, feedback, game requests, or DMCA inquiries.">
+  <meta name="description" content="Contact Chromebook Unlocked Games for support, bug reports, feedback, DMCA inquiries or business offers.">
   <link rel="icon" type="image/png" href="../assets/logo.png">
 
   <style>
@@ -321,7 +321,7 @@
       <h3><span class="icon">💼</span> Business Inquiries</h3>
       <p>For business partnerships, collaborations, advertising opportunities, or general business matters:</p>
       <a href="mailto:chunlocked.business@gmail.com" class="email-link">
-        chunlocked.business@gmail.com
+        chunblocked.contact@gmail.com
       </a>
     </div>
 
@@ -334,7 +334,7 @@
         <li>Any relevant documentation or proof of ownership (if applicable)</li>
       </ul>
       <p>For copyright-related removal requests, please visit our <a href="dmca.html" style="color: var(--primary-color);">DMCA page</a> for the proper procedure.</p>
-      <a href="mailto:chunlocked.business@gmail.com" class="email-link">
+      <a href="mailto:chunblocked.contact@gmail.com" class="email-link">
         chunlocked.business@gmail.com
       </a>
     </div>
@@ -349,8 +349,8 @@
         <li>Steps to reproduce the issue</li>
         <li>Any error messages you received</li>
       </ul>
-      <a href="mailto:chunlocked.business@gmail.com" class="email-link">
-        chunlocked.business@gmail.com
+      <a href="mailto:chunblocked.contact@gmail.com" class="email-link">
+        chunblocked.contact@gmail.com
       </a>
     </div>
 
